<resources>
    <string name="app_name">IdentidadMobile</string>
    <string name="hint_imei">IMEI</string>
    <string name="hint_id_card_sim">Id Card SIM</string>
    <string name="hint_celular">Número Celular</string>
    <string name="hint_descripcion">Descripción</string>
    <string name="hint_id_empleado">Id empleado</string>
    <string name="hint_nombres_empleado">Nombres</string>
    <string name="hint_apellido_paterno_empleado">Apellido paterno</string>
    <string name="hint_apellido_materno_empleado">Apellido materno</string>
    <string name="hint_direcccion_empleado">Dirección</string>
    <string name="accion_cancelar">Cancelar</string>
    <string name="accion_aceptar">Aceptar</string>
    <string name="actividad_titulo_registrar_dispositivo">Registro de Dispositivo</string>
    <string name="actividad_titulo_registrar_empleado">Registro de Empleado</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="edit">Edit</string>
    <string name="exit">Exit</string>
    <string name="action_edit">Editar</string>
    <string name="action_delete">Eliminar</string>
    <string name="girl_ipsum">
        Morbi posuere lorem nec elit dapibus, vitae accumsan mauris pellentesque.
        Vestibulum a lobortis mi. Vestibulum lacinia molestie semper. Pellentesque
        ultrices arcu lacus, interdum mollis nibh convallis ut. Aliquam sagittis
        sem a lacus gravida, eu accumsan purus volutpat. Donec tempus, est id
        tristique consectetur, lacus ligula dignissim turpis, cursus commodo turpis
        libero in purus. Phasellus tempus gravida tempor.
    </string>
    <string name="hint_dni_empleado">DNI</string>
    <string name="hint_email_empleado">Email</string>
    <string name="hint_fecha_nacimiento_empleado">Fecha Nacimiento</string>
    <string name="hint_cargo_empleado">Cargo</string>
    <string name="hint_fecha_ingreso_empleado">Fecha Ingreso</string>
    <string name="hint_fecha_baja_empleado">Fecha de Baja</string>
    <string name="error_campo_vacio">Ingresa un valor</string>
    <string name="error_campo_grande">Ingresa un valor de tamaño adecuado</string>
    <string name="error_campo_invalido_nombre_empleado">Nombre de empleado inválido (Sólo caractéres)</string>
    <string name="error_campo_invalido_apellido_paterno_empleado">Apellido paterno de empleado inválido (Sólo caractéres)</string>
    <string name="error_campo_invalido_apellido_materno_empleado">Apellido materno de empleado inválido (Sólo caractéres)</string>
    <string-array name="entradas_cargo">
        <item>Vendedor</item>
        <item>Técnico Instalador</item>
        <item>Técnico Servicio</item>
        <item>Halcon</item>
        <item>Supervisor</item>
    </string-array>
    <string name="title_activity_empleado_adicionar_editar">EmpleadoAdicionarEditarActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_campo_invalido_mail">Correo electrónico inválido</string>
    <string name="error_campo_invalido_fecha">Valor de fecha inválida</string>
    <string name="title_activity_empleado_listado">Listado de Empleados</string>
    <string name="title_activity_dispostivo_registro">Registro Dispositivo</string>
    <string name="title_activity_empleado_detalle">EmpleadoDetalleActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="menu_busqueda">Búsqueda</string>
    <string name="search_etiqueta">Boxer</string>
    <string name="search_hint">Busca el empleado</string>
    <string name="settings_descripcion">Descripcion de empleados</string>
    <string name="hint_fecha_hora_ubicacion">Fecha Hora Ultima Ubicacion</string>
    <string name="mensaje_listado_vacio">No hay datos que mostrar</string>
    <string name="title_activity_geo_cerca_adicionar_editar_detalle">
        GeoCercaAdicionarEditarDetalleActivity
    </string>
    <string name="title_activity_unidad_reaccion_asignacion">Asignación de Unidad Reacción
    </string>
    <string name="police_stations">Police Stations in Victoria</string>
    <string name="police_stations_url">http://data.gov.au/dataset/police-station-locations/resource/76110b24-0f0a-4c29-9583-3f99eaba486c</string>
    <string name="medicare">Medicare Offices</string>
    <string name="medicare_url">http://data.gov.au/dataset/location-of-medicare-offices/resource/5d38e1be-4011-49c4-8b8b-75405eeb1088</string>
    <string name="titulo_mapa_termico">Mapa Térmico</string>
    <string name="titulo_mapa_agrupacion">Mapa Agrupación</string>
    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="address_found">Address found</string>
    <string name="title_activity_orden_instalacion_listado">OrdenInstalacionListadoActivity</string>
    <string name="title_activity_orden_instalacion_ejecutar_actividad">
        Ejecución de Actividades
    </string>
    <string name="title_activity_dispostivo_editar_crear">Registro Dispositivo</string>
    <string name="title_activity_main">Configuración Rastreo</string>
    <string name="start_tracking">Start Tracking</string>
    <string name="stop_tracking">Stop Tracking</string>
    <string name="enter_transport_id">Enter transport ID</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string
        name="location_permissions_required">Location permissions are required for tracking
        location. Please grant these permissions to continue.</string>
    <string name="missing_inputs">Please enter a transport ID, email and password</string>
    <string name="tracking">Tracking &#x2713;</string>
    <string name="not_tracking">Not tracking &#x2718;</string>
    <string name="connecting">Connecting &#8230;</string>
    <string name="status">status</string>
</resources>