<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="170dp"
    card_view:cardCornerRadius="4dp"
    card_view:cardElevation="4dp"
    card_view:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageViewFotoEmpleado"
            android:layout_width="120dp"
            android:layout_height="170dp"
            android:scaleType="centerCrop"
            app:srcCompat="@mipmap/brian_o_conner" />

        <LinearLayout
            android:id="@+id/linearLayoutApellidoPaternoEmpleado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="0dp"
            android:layout_toRightOf="@+id/imageViewFotoEmpleado"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewApellidoPaternoEmpleadoEtiqueta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="@dimen/activity_vertical_margin_dos"
                android:text="@string/hint_apellido_paterno_empleado"
                android:textColor="?colorPrimary" />

            <TextView
                android:id="@+id/textViewApellidoPaternoEmpleadoValor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:text="Ezeta"
                tools:text="Ezeta" />
        </LinearLayout>

        <RelativeLayout
            android:layout_toRightOf="@+id/linearLayoutApellidoPaternoEmpleado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageViewUbicacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="@dimen/activity_vertical_margin_dos"
                    android:layout_toLeftOf="@+id/textViewUbicacion"
                    android:src="@drawable/ic_location_on_black_24dp" />

                <TextView
                    android:id="@+id/textViewUbicacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin_dos"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="false"
                    android:layout_centerVertical="true"
                    android:text="Ubicación" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/linearLayoutApellidoMaternoEmpleado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:layout_toRightOf="@+id/imageViewFotoEmpleado"
            android:layout_below="@id/linearLayoutApellidoPaternoEmpleado"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewApellidoMaternoEmpleadoEtiqueta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="0dp"
                android:text="@string/hint_apellido_materno_empleado"
                android:textColor="?colorPrimary" />

            <TextView
                android:id="@+id/textViewApellidoMaternoEmpleadoValor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:text="Ticona"
                tools:text="Ticona"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutNombresEmpleado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:layout_toRightOf="@+id/imageViewFotoEmpleado"
            android:layout_below="@id/linearLayoutApellidoMaternoEmpleado"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewNombresEmpleadoEtiqueta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="0dp"
                android:text="@string/hint_nombres_empleado"
                android:textColor="?colorPrimary" />

            <TextView
                android:id="@+id/textViewNombresEmpleadoValor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:text="Yerico Yampool"
                tools:text="Yerico Yampool" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutCargoEmpleado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:layout_toRightOf="@+id/imageViewFotoEmpleado"
            android:layout_below="@+id/linearLayoutNombresEmpleado"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewDescripionCargoEmpleadoEtiqueta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="0dp"
                android:layout_marginTop="0dp"
                android:text="@string/hint_cargo_empleado"
                android:textColor="?colorPrimary" />

            <TextView
                android:id="@+id/textViewDescripionCargoEmpleadoValor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="0dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                tools:text="Halcón"/>
        </LinearLayout>


    </RelativeLayout>
</android.support.v7.widget.CardView>